--- a/scss/patterns/_activities.scss
+++ b/scss/patterns/_activities.scss
@@ -1,6 +1,7 @@
 .activities{
   background: $white;
   padding:109px 0 0;
+  z-index: 1;
   @media screen and (min-width: $desktop-small){
     padding:109px 0 150px;
   }
