--- a/scss/patterns/_alliiances.scss
+++ b/scss/patterns/_alliiances.scss
@@ -131,11 +131,11 @@
             font-size: 16px;
             @media screen and (min-width: $mobile-small){
               max-width: 45%;
-              padding:20px 0;
+              padding:20px 0 20px 20px;
             }
             @media screen and (min-width: $desktop-medium){
               max-width: none;
-              padding-top: 30px;
+              padding: 30px 0 0 0;
             }
             &:before{
               content:"";
