--- a/scss/patterns/_banner.scss
+++ b/scss/patterns/_banner.scss
@@ -32,6 +32,7 @@
         right:0;
         overflow: hidden;
         padding-bottom: 15px;
+        width: 100%;
         @media screen and (min-width: $desktop-medium){
           bottom:270px;
         }
@@ -71,14 +72,16 @@
           text-transform: uppercase;
           transform: translateX(-115%);
           display: inline-block;
+          transition: color .5s linear 0s;
           &:before{
             content:"";
             width: 100%;
             height:2px;
             background: $white;
-            bottom:-10px;
+            bottom:0px;
             left:0;
             position: absolute;
+            transition: all .2s;
           }
         }
       }
@@ -90,9 +93,16 @@
             transform: translateX(0);
           }
           a{
-            transition: all .5s;
-            transition-delay: 1s;
+            transition: transform .5s 1s;
             transform: translateX(0);
+            padding-bottom: 7px;
+            &:hover{
+              color: $color-hover;
+              transition-delay: 0s;
+              &:before{
+                background: $color-hover;
+              }
+            }
           }
         }
       }
@@ -103,15 +113,16 @@
         overflow: inherit;
         font-size: 0;
         left:auto;
-        &:before{
-          font-size: 40px;
-          line-height: 40px;
-          border:2px solid $white;
-          border-radius: 50%;
-          @media screen and (min-width: $tablet-medium){
-            font-size: 60px;
-            line-height: 60px;
-          }
+        height:40px;
+        width: 40px;
+        @include display-flex();
+        border:2px solid $white;
+        border-radius: 50%;
+        align-items: center;
+        justify-content: center;
+        @media screen and (min-width: $tablet-medium){
+          height:60px;
+          width: 60px;
         }
       }
       .flex-prev{
@@ -225,13 +236,6 @@
     left:auto;
     &:before{
       font-size: 40px;
-      line-height: 40px;
-      border:2px solid $white;
-      border-radius: 50%;
-      @media screen and (min-width: $tablet-medium){
-        font-size: 60px;
-        line-height: 60px;
-      }
     }
   }
   .flex-prev{
