--- a/scss/patterns/_keyfigures.scss
+++ b/scss/patterns/_keyfigures.scss
@@ -14,6 +14,7 @@
     }
     .button_read__more{
       bottom: -90px;
+      z-index: 1;
       @media screen and (min-width: $mobile-small){
         bottom: -120px;
       }
