--- a/scss/patterns/_presse.scss
+++ b/scss/patterns/_presse.scss
@@ -35,6 +35,7 @@
     border-top: 6px solid #e21a5b;
     background: $white;
     box-shadow: 1px 1px 12px #ccc;
+    padding-right: 40px;
     @media screen and (max-width: $tablet-medium - 1px){
       width: 100%;
     }
@@ -74,6 +75,8 @@
             width: calc(100% - 30px);
             left:auto;
             right: 15px;
+            bottom: auto;
+            margin-top: -33px;
             @media screen and (min-width: $tablet-medium){
               width: calc(50% - 15px);
             }
