--- a/scss/patterns/_presse_home.scss
+++ b/scss/patterns/_presse_home.scss
@@ -4,12 +4,29 @@
     max-width: 1134px;
     margin:0 auto;
     margin-bottom: 30px;
+    position: relative;
     @media screen and (min-width: $tablet-medium){
       margin-left: 50px;
       margin-bottom: 60px;
     }
     @media screen and (min-width: $desktop-medium){
       margin-left: auto;
+    }
+    .read__more{
+      @media screen and (min-width: $tablet-medium){
+        position: absolute;
+        right:17px;
+        top:15px;
+      }
+      @media screen and (min-width: $tablet-lage){
+        top:20px;
+      }
+      @media screen and (min-width: $desktop-medium) {
+        top: 30px;
+      }
+      &:hover{
+        right:0;
+      }
     }
   }
   .wrapper{
@@ -18,6 +35,7 @@
   &--main{
     @include display-flex();
     flex-wrap: wrap;
+    padding-bottom: 10px;
     @media screen and (min-width: $mobile-small){
       margin:0 -9px;
     }
@@ -191,5 +209,8 @@
   }
   &.see-also-block{
     padding:65px 0 85px;
+    .title{
+      max-width: 1120px;
+    }
   }
 }
