--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -1430,12 +1430,8 @@ h1 {
   justify-content: space-between; }
   @media screen and (min-width: 992px) {
     h1 {
-      font-size: 50px;
-      font-size: 3.125rem; } }
-  @media screen and (min-width: 1024px) {
-    h1 {
-      font-size: 65px;
-      font-size: 4.0625rem; } }
+      font-size: 44px;
+      font-size: 2.75rem; } }
 
 h2 {
   font-size: 32px;
@@ -1466,12 +1462,8 @@ h2 {
       display: flex; } }
   @media screen and (min-width: 992px) {
     .title {
-      font-size: 50px;
-      font-size: 3.125rem; } }
-  @media screen and (min-width: 1024px) {
-    .title {
-      font-size: 65px;
-      font-size: 4.0625rem; } }
+      font-size: 44px;
+      font-size: 2.75rem; } }
   .title a {
     font-family: excellenceinmotion_medium;
     font-size: 18px;
@@ -1494,7 +1486,8 @@ h2 {
   padding-left: 35px;
   position: relative;
   overflow: hidden;
-  transition: all .2s; }
+  transition: all .2s;
+  cursor: pointer; }
   .read__more:before {
     content: "";
     width: 0px;
@@ -1657,6 +1650,10 @@ h2 {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex; } }
+  .reveal .box-head .description a {
+    color: #0062e6; }
+    .reveal .box-head .description a:hover {
+      color: #ff1111; }
   .reveal .modal-close {
     color: #fff;
     position: absolute;
@@ -3559,39 +3556,39 @@ ul.primary li a {
       border-bottom: 0.375rem solid #ff0d0d; }
     .presse__home .block-views:nth-child(2) .presse__home--item:nth-child(2) .presse__home--item-title a:hover {
       color: #ff0d0d; }
-  .presse__home .block-bean {
-    width: 100%;
-    background: #fff;
-    box-shadow: 1px 1px 12px #ccc;
-    margin: 9px 0;
-    margin: 0.5625rem 0; }
-    @media screen and (min-width: 480px) {
-      .presse__home .block-bean {
-        width: calc(50% - 18px);
-        width: calc(50% - 1.125rem);
-        margin: 9px;
-        margin: 0.5625rem; } }
-    @media screen and (min-width: 1024px) {
-      .presse__home .block-bean {
-        width: calc(25% - 18px);
-        width: calc(25% - 1.125rem);
-        margin: 0 9px;
-        margin: 0 0.5625rem; } }
-    .presse__home .block-bean .image {
-      border-bottom: 6px solid #aeca10;
-      border-bottom: 0.375rem solid #aeca10; }
-    .presse__home .block-bean .presse__home--item-title a:hover {
-      color: #aeca10; }
-    .presse__home .block-bean:nth-child(2) .image {
-      border-bottom: 6px solid #ff0d0d;
-      border-bottom: 0.375rem solid #ff0d0d; }
-    .presse__home .block-bean:nth-child(2) .presse__home--item-title a:hover {
-      color: #ff0d0d; }
   .presse__home.see-also-block {
     padding: 65px 0 85px;
     padding: 4.0625rem 0 5.3125rem; }
     .presse__home.see-also-block .title {
       max-width: 1120px; }
+    .presse__home.see-also-block .block-bean {
+      width: 100%;
+      background: #fff;
+      box-shadow: 1px 1px 12px #ccc;
+      margin: 9px 0;
+      margin: 0.5625rem 0; }
+      @media screen and (min-width: 480px) {
+        .presse__home.see-also-block .block-bean {
+          width: calc(50% - 18px);
+          width: calc(50% - 1.125rem);
+          margin: 9px;
+          margin: 0.5625rem; } }
+      @media screen and (min-width: 1024px) {
+        .presse__home.see-also-block .block-bean {
+          width: calc(25% - 18px);
+          width: calc(25% - 1.125rem);
+          margin: 0 9px;
+          margin: 0 0.5625rem; } }
+      .presse__home.see-also-block .block-bean .image {
+        border-bottom: 6px solid #aeca10;
+        border-bottom: 0.375rem solid #aeca10; }
+      .presse__home.see-also-block .block-bean .presse__home--item-title a:hover {
+        color: #aeca10; }
+      .presse__home.see-also-block .block-bean:nth-child(2) .image {
+        border-bottom: 6px solid #ff0d0d;
+        border-bottom: 0.375rem solid #ff0d0d; }
+      .presse__home.see-also-block .block-bean:nth-child(2) .presse__home--item-title a:hover {
+        color: #ff0d0d; }
 
 .bref__home {
   margin-bottom: 50px; }
@@ -3798,7 +3795,7 @@ ul.primary li a {
     .keyfigures .sub-content .button_read__more {
       bottom: -90px;
       bottom: -5.625rem;
-      z-index: 1; }
+      z-index: 2; }
       @media screen and (min-width: 480px) {
         .keyfigures .sub-content .button_read__more {
           bottom: -120px;
@@ -4716,6 +4713,17 @@ ul.primary li a {
     font-size: 1.125rem; }
     .map-content-popup .project-title a {
       color: #051039; }
+
+#user-login .form-item {
+  max-width: 500px; }
+  #user-login .form-item input {
+    border: 1px solid #051039;
+    border: 0.0625rem solid #051039; }
+
+#user-login #edit-submit {
+  padding: 10px 10px;
+  padding: 0.625rem 0.625rem;
+  cursor: pointer; }
 
 /* Page 404 css
 -------------------------------------------------------------- */
