--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,7 @@
 @import "patterns/_detail_actua";
 @import "patterns/_search";
 @import "patterns/_project_page";
+@import "patterns/_login_page";
 
 //Pages
 @import "pages/_404";
